# databridge-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: customers_a.csv  customers_b.csv  demo.py  guided_tour.py  knowledge_export.json
examples/tour_data/: bank_aligned.csv  crm_sales.csv  gl_extract.csv  sap_coa_messy.csv
src/databridge_core/: __init__.py  _io.py  _types.py  cli.py  erp_detect.py  files.py  fraud_detect.py  fx_validate.py  standards_check.py
src/databridge_core/connectors/: __init__.py  duckdb_local.py
src/databridge_core/detection/: __init__.py  _counterexamples.py  _feedback.py  _graph.py  _grounded.py  _monitors.py  _prompts.py  _rules.py  _state.py  _types.py  _verifier.py
src/databridge_core/examples/: TOUR_GUIDE.md
src/databridge_core/examples/tour_data/: bank_statement.csv  erp_aligned.csv  erp_invoices.csv  legacy_vendors.csv  new_erp_vendors.csv
src/databridge_core/ingestion/: __init__.py  csv_loader.py  ocr.py  pdf.py  table_parser.py
src/databridge_core/integrations/: __init__.py  _base.py  slack.py
src/databridge_core/linker/: __init__.py  _extractor.py  _linker.py  _scorer.py  _types.py
src/databridge_core/profiler/: __init__.py  expectations.py  profile.py  validation.py
src/databridge_core/reconciler/: __init__.py  differ.py  fuzzy.py  hasher.py  merger.py  transform.py
src/databridge_core/templates/: __init__.py  _service.py  _types.py
src/databridge_core/triage/: __init__.py  _classifier.py  _report.py  _scanner.py  _types.py
tests/: conftest.py  test_cli.py  test_detection.py  test_differ.py  test_expectations.py  test_ingestion.py  test_integrations.py  test_linker.py  test_profiler.py  test_reconciler.py  test_templates.py  test_triage.py
